Updated the names

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuga Moses (Mastermind MM) for Course Rep | 100lvl Economics</title>
+    <title>Adenuga Mololuwa (Mastermind MM) for Course Rep | 100lvl Economics</title>
+    <link rel="icon" href="Moses.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -592,7 +593,7 @@
         <div class="header-container">
             <div class="logo">
                 <div class="logo-img">MM</div>
-                <h1>Nuga Moses</h1>
+                <h1>Moses</h1>
             </div>
             <nav>
                 <ul id="navMenu">
@@ -611,7 +612,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <img src="Moses.jpg" alt="Nuga Moses" class="hero-image">
-            <h1>Nuga Moses <span>(Mastermind MM)</span></h1>
+            <h1>Adenuga Mololuwa Moses<span>(Mastermind MM)</span></h1>
             <h2>For 100lvl Economics Course Representative</h2>
             <p>Your trusted voice for transparent leadership, faster information delivery, and zero course rep fees.</p>
             <div class="hero-btns">
@@ -620,7 +621,6 @@
             </div>
         </div>
     </section>
-
     <!-- Split Screen Manifesto Section -->
     <section class="split-screen" id="manifesto">
         <div class="left-panel">
